Small fix for search on mobile.

--- a/src/index.scss
+++ b/src/index.scss
@@ -67,6 +67,13 @@ h1 {
   display: flex;
   justify-content: center;
 
+  & .MuiFormGroup-root {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   & input {
     background-color: $light-gray;
     border: 1px solid $lighter-gray;
